--- a/openCVLibrary3/build.gradle
+++ b/openCVLibrary3/build.gradle
@@ -1,10 +1,12 @@
 apply plugin: 'com.android.library'
+
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 21
+        minSdkVersion 19
+        targetSdkVersion 26
     }
 
     buildTypes {
@@ -13,7 +15,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
-    buildToolsVersion = '28.0.2'
 }
 
 dependencies {
