--- a/DogeCV/build.gradle
+++ b/DogeCV/build.gradle
@@ -26,4 +26,12 @@ repositories {
 }
 dependencies {
     api project(":openCVLibrary3")
+    api project(":FtcRobotController")
+    implementation project(':FtcRobotController')
+    implementation (name: 'RobotCore-release', ext: 'aar')
+    implementation (name: 'Hardware-release', ext: 'aar')
+    implementation (name: 'FtcCommon-release', ext: 'aar')
+    implementation (name: 'WirelessP2p-release', ext:'aar')
+    implementation (name: 'tfod-release', ext:'aar')
+    implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
 }
